--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-live-clock": "^5.6.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "recharts": "^2.1.9",
