--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
@@ -26,7 +26,7 @@
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://Dhruvil-Lakhtaria.github.io/Medicine-Ordering-Website/",
+  "homepage": "https://Dhruvil-Lakhtaria.github.io/Medicine-Ordering-Website",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
